samples/_failures_safe/1761691845_ed504d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b887d087.c: In function ‘main’:
./samples/SAFE/__tmp_b887d087.c:191:12: error: missing terminating " character
  191 |     printf("0
      |            ^~
./samples/SAFE/__tmp_b887d087.c:191:5: error: expected expression at end of input
  191 |     printf("0
      |     ^~~~~~
./samples/SAFE/__tmp_b887d087.c:191:5: error: expected declaration or statement at end of input
